--- a/Capstone_project_(NewsExtension)/manifest.json
+++ b/Capstone_project_(NewsExtension)/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
-    "name": "RSS Reader",
-    "description": "Reads and displays news titles and descriptions from an RSS feed.",
+    "name": "News read daily",
+    "description": "displays news titles and descriptions from The Hindu ,The project is sole for learning purposeand.",
     "version": "1.0",
     "permissions": ["activeTab", "https://www.thehindu.com/news/national/feeder/default.rss"],
     "browser_action": {
